# crypto-honeypot

./: .gitignore  DEPLOYMENT.md  ON_CHAIN_MONITORING.md  README.md  deploy.ps1  deploy.sh  pyproject.toml  test-addresses.json
docker-example/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ON_CHAIN_MONITORING.md
src/honeypot_deployer/: cli.py  manifest.py
src/honeypot_deployer/generators/: ada.py  browser.py  btc.py  eth.py  seed.py  sol.py  xrp.py
test utils/: validate_honeypot.ps1  validate_honeypot.sh
test-artifacts/: manifest.json
test-artifacts/ada/: payment.skey  payment.vkey
test-artifacts/browser/electrum/wallets/: default_wallet
test-artifacts/eth/keystore/: UTC--2026-03-19T07-12-07.000000000Z--63c663726d36d1b883ebf517f23c41f1ce0a4f8c  UTC--2026-03-31T07-11-32.000000000Z--8c501a9aa1cc48bf93e54bdde82bbe7f94193d32
test-artifacts/seed/: .seed_phrase  notes.txt  seed-backup.txt  wallet-backup.json
test-artifacts/sol/: id.json
test-artifacts/sol/cli/: config.yml
test-artifacts/xrp/: xrp-wallet-backup.json
test-utils/: README.md  validate_honeypot.ps1  validate_honeypot.sh
test-wazuh-config/: honeypot-fim.conf
wazuh/: active_response.xml  agent_config.xml  manager_rules.xml
wazuh/active-response/: honeypot-forensic-snapshot.sh
wazuh/agent-config/: honeypot-audit.rules  honeypot-sysmon.xml  ossec-active-response.conf  ossec-honeypot-fim.conf  ossec-log-collector.conf
wazuh/decoders/: honeypot_decoder.xml
wazuh/rules/: honeypot_rules.xml
(+3 files in other folders)
