[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeypot-deployer"
version = "0.1.0"
description = "Defensive crypto wallet honeypot deployer for Wazuh SIEM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Fliite Cybersecurity"},
]
dependencies = [
    "click>=8.1",
    "cryptography>=41.0",
    "mnemonic>=0.20",
    "ecdsa>=0.18",
    "base58>=2.1",
    "pynacl>=1.5",
    "eth-account>=0.11",
    "web3>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.8",
    "pytest>=8.0",
]

[project.scripts]
honeypot-deployer = "honeypot_deployer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
